--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
-  "name": "threejs",
+  "name": "three-npm",
   "version": "1.0.0",
-  "description": "3D Graphic in Web",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack --config webpack.config.js",
+    "start": "webpack-dev-server --mode development",
+    "format": "prettier --write '**/*.js'"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/kangdy25/ThreeJS.git"
-  },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/kangdy25/ThreeJS/issues"
-  },
-  "homepage": "https://github.com/kangdy25/ThreeJS#readme",
   "dependencies": {
-    "three": "^0.156.1"
+    "three": "^0.115.0"
+  },
+  "devDependencies": {
+    "prettier": "^2.0.4",
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0"
   }
 }
