--- a/ThreeJS/package.json
+++ b/ThreeJS/package.json
@@ -12,7 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "three": "^0.115.0"
+    "three": "^0.115.0",
+    "three-npm": "file:"
   },
   "devDependencies": {
     "prettier": "^2.0.4",
